--- a/css/menu.css
+++ b/css/menu.css
@@ -41,6 +41,11 @@ header {
   display: block;
 }
 
+.mob-menu .menu-item {
+  width: 100%;
+  padding:0 20px;
+}
+
 .blurb {
   margin-top: 30px;
   font-size: 14px;
@@ -173,7 +178,7 @@ nav a:hover {
 
 .mob-menu {
   z-index: 2;
-  width: 70%;
+  width: 100%;
   height: 100vh;
   padding: 25% 0 15%;
   background-color: #fff;
