--- a/css/case-study.css
+++ b/css/case-study.css
@@ -187,7 +187,7 @@ h6 {
   #nautiqua-stats {
     background-attachment: unset;
   }
-  #nautiqua-product {
+  #nautiqua-product, #nautiqua-installation {
     background-attachment: unset;
     height: 50vh;
   }
