--- a/css/main.css
+++ b/css/main.css
@@ -338,7 +338,7 @@ footer {
     width: 100%;
   }
 
-  #bg-nautiqua-case-study, #bg-coral-rescue-case-study, #bg-pasc-case-study {
+  #bg-her-legend-case-study, #bg-nautiqua-case-study, #bg-coral-rescue-case-study, #bg-pasc-case-study {
     height: 200px;
   }
 
