--- a/css/main.css
+++ b/css/main.css
@@ -349,7 +349,7 @@ footer {
     width: 100%;
   }
 
-  #bg-her-legend-case-study, #bg-nautiqua-case-study, #bg-coral-rescue-case-study, #bg-pasc-case-study {
+  #bg-little-night-helpers-case-study, #bg-her-legend-case-study, #bg-nautiqua-case-study, #bg-coral-rescue-case-study, #bg-pasc-case-study {
     height: 200px;
   }
 
