--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ video {
 }
 
 #bg-little-night-helpers-case-study {
-  background-image: url(../images/little-night-helpers/image4.jpg);
+  background-image: url(../images/little-night-helpers/thumbnail2.png);
   background-size: cover;
   background-position: center;
 }
